<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bncr.arc3labs.bncrandroid.ChangePasswordActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/blue_button_primary_backgroud">


        <TextView
            android:text="@string/change_password_subtitle"
            android:textColor="@color/white_backgroud"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textAlignment="center"
            android:layout_gravity="left|center_vertical" />
    </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password_user_name"
                android:textSize="20dp"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password_actual_key"
                android:textSize="18dp"
                android:textColor="@color/blue_text_color"
                android:layout_marginBottom="8dp"
                />

            <EditText
                android:id="@+id/actualEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:textSize="18dp"
                android:hint="@string/change_password_hit_actual_key"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_pasword_legend_one"
                android:textSize="18dp"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password_new_key"
                android:textSize="18dp"
                android:textColor="@color/blue_text_color"
                android:layout_marginBottom="8dp"
                />

            <EditText
                android:id="@+id/newPasswordEditText"
                android:hint="@string/change_password_hit_new_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:textSize="18dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password_confirm"
                android:textSize="18dp"
                android:textColor="@color/blue_text_color"
                android:layout_marginBottom="8dp"
                />

            <EditText
                android:id="@+id/ConfirmPasswordEditText"
                android:hint="@string/change_password_hit_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:textSize="18dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password_legend_twoo"
                android:textSize="18dp"
                android:layout_marginBottom="16dp"
                />

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password_accept"
                android:textColor="@color/white_backgroud"
                android:layout_marginBottom="16dp"
                android:background="@color/blue_button_primary_backgroud"/>


            </LinearLayout>

    </ScrollView>

</LinearLayout>
